--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elaborando layout</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/image/Loren-designstyle-colors-m.png" alt="">
+            <img src="/image/Loren-designstyle-colors-m.png" alt="logo com nome Lorem">
         </div>
         <nav class="nav">
             <ul class="nav-menu">
@@ -24,7 +25,29 @@
             <h1>LOREM IPSUM</h1>
             <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus facere numquam reiciendis explicabo incidunt velit maiores voluptatem officiis nulla, exercitationem illo ducimus soluta dolores modi? Iste neque possimus error.</article>
         </section>
-        <div class="main">MAIN</div>
+        <main class="main">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </main>
         <div class="aside">ASSIDE</div>
         <div class="footer">FOOTER</div>
     </main>
